[project]
name = "shapley-banckruptcy"
version = "0.1.0"
description = ""
authors = [
    {name = "ShuntaYamazaki",email = "shuntaweb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
