[project]
name = "shapley-banckruptcy"
version = "0.1.0"
description = "Algorithms for computing the Shapley value in bankruptcy games"
authors = [
    { name = "Shunta Yamazaki", email = "shuntaweb@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy >=2.3.5,<3.0.0",
    "pydantic >=2.12.4,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
